--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@
     margin: 0 auto;
     margin-top: 120px;
     gap: 30px;
+    margin-bottom: 80px;
 }
 .seller img{
     width: 550px;
@@ -146,5 +147,74 @@
 
 .sell-dis li{
      padding-bottom: 20px;
+}
 
+.deals{
+    text-align: center;
+    margin: 0 auto;
+    max-width: 888px;
+    margin-bottom: 80px;
+}
+.title {
+    font-weight: bold;
+    font-size: 50px;
+}
+
+.deals-dis{
+    font-size: 22px;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+
+
+
+.offer-section {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+.offer {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: repeat(2, 1fr);
+  gap: 28px;
+}
+
+.promo-card {
+  border-radius: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 200px;
+  overflow: hidden;
+}
+
+
+.offer-content {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+
+
+.offer-title{
+    font-size: 40px;
+    font-weight: bold;
+}
+.offer-content a {
+  display: inline-block;
+  color: rgba(255, 255, 255, 1);
+  text-decoration: underline;
+  font-weight: bold;
+  font-size: 22px;
+}
+
+.promo-card.large {
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
+}
+
+.promo-card.small {
+  grid-column: 1 / 2;
 }
