--- a/style.css
+++ b/style.css
@@ -267,34 +267,34 @@ body{
 }
 
 .footer {
+    display: flex;
+ 
   padding: 50px 60px;
- 
-}
-.footer-dis{
-    font-size: 22px;
 }
 
-.footer-content {
-  display: flex;
-  justify-content: space-between;
-   max-width: 1140px;
-  margin: 0 auto;
-  
-}
 
-.footer-links {
-  display: flex;
-  
+.footer-content{
+    display: flex;
+    max-width: 1120px;
+    margin: 0 auto;
 }
- 
+.footer-links{
+    display: flex;
+    gap: 50px;
+}
 
 .footer-links ul {
   list-style: none;
   
 }
 
+.footer-dis{
+    font-size: 22px;
+}
+
+
 .footer-links ul li {
- margin-bottom: 30px;
+ margin-bottom: 20px;
   cursor: pointer;
 }
 
@@ -302,5 +302,25 @@ body{
   display: flex;
   justify-content: space-between;
   gap: 30px;
-}
+} 
 
+
+
+/* responsive style */
+@media screen and (max-width:430px) {
+    .nav-item{
+        max-width: 100% ;
+        visibility: hidden;
+    }
+    .banner{
+        flex-direction: column;
+    }
+    .product-card{
+        display: grid;
+         grid-template-columns: repeat(2, 2fr);
+       
+        justify-items: center;
+    }
+
+    
+}
